2011-04-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Update to account for movement of .cfg files.

2009-10-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* low_ticker1/init.c: Change minimum stack space on SPARC to 1024.
	* ticker/init.c: Why was clock tick 1 microsecond?

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog: New file.
